--- a/locale/de.json
+++ b/locale/de.json
@@ -2,14 +2,14 @@
   "node":{
     "all":"Alle Knoten",
     "nodes":"Knoten",
-    "uptime":"Uptime",
+    "uptime":"Laufzeit",
     "links":"Verbindungen",
     "clients":"Nutzer",
-    "distance":"Distance",
+    "distance":"Entfernung",
     "tq":"TQ",
-    "lastOnline":"online, last message %{time} (%{date})",
-    "lastOffline":"offline, last message %{time} (%{date})",
-    "activated":"activated (%{branch})",
+    "lastOnline":"online, letzte Nachricht %{time} (%{date})",
+    "lastOffline":"offline, letzte Nachricht %{time} (%{date})",
+    "activated":"aktiviert (%{branch})",
     "deactivated":"deaktiviert",
     "status":"Status",
     "firmware":"Firmware-Version",
@@ -18,19 +18,19 @@
     "update":"Auto-Update",
     "site":"Site",
     "gateway":"Gateway",
-    "coordinates":"Coordinates",
-    "contact":"Contact",
-    "primaryMac":"Primary MAC",
-    "id":"Node ID",
-    "firstSeen":"First seen",
+    "coordinates":"Koordinaten",
+    "contact":"Kontakt",
+    "primaryMac":"Primäre MAC",
+    "id":"Knoten ID",
+    "firstSeen":"Erstmals gesehen",
     "systemLoad":"Load average",
-    "ram":"Memory usage",
-    "ipAddresses":"IP addresses",
-    "selectedGateway":"Selected gateway",
-    "link":"Link |||| Links",
-    "node":"Node |||| Nodes",
-    "new":"New nodes",
-    "missing":"Disappeared nodes"
+    "ram":"Speicherauslastung",
+    "ipAddresses":"IP Adressen",
+    "selectedGateway":"Gewähltes Gateway",
+    "link":"Verbindung |||| Verbindungen",
+    "node":"Knoten",
+    "new":"Neuer Knoten",
+    "missing":"Verschwundene Knoten"
   },
   "location":{
     "location":"Standort",
@@ -40,15 +40,15 @@
   },
   "sidebar":{
     "nodes":"%{total} Knoten, davon %{online} Knoten online",
-    "clients":"with %{smart_count} client |||| with %{smart_count} clients",
-    "gateway":"on %{smart_count} gateway |||| on %{smart_count} gateways",
-    "lastUpdate":"Last update",
-    "nodeNew":"Node is new",
-    "nodeOnline":"Node is online",
-    "nodeOffline":"Node is offline",
+    "clients":"mit %{smart_count} Nutzer |||| mit %{smart_count} Nutzern",
+    "gateway":"auf %{smart_count} Gateway |||| auf %{smart_count} Gateways",
+    "lastUpdate":"Letzte Aktualisierung",
+    "nodeNew":"Knoten ist neu",
+    "nodeOnline":"Knoten ist online",
+    "nodeOffline":"Knoten ist offline",
     "aboutInfo":"<h2>Über Meshviewer</h2><p>Mit Doppelklick kann man in die Karte hinein zoomen und Shift+Doppelklick heraus zoomen.</p>",
-    "actual":"Actual",
-    "stats":"Statistics",
+    "actual":"Aktuell",
+    "stats":"Statistiken",
     "about":"Über"
   },
   "momentjs":{
@@ -78,6 +78,6 @@
   },
   "yes":"ja",
   "no":"nein",
-  "unknown":"unknown",
-  "none":"none"
+  "unknown":"unbekannt",
+  "none":"keine"
 }
