[TASK] Update translations from crowdin

--- a/locale/de.json
+++ b/locale/de.json
@@ -1,89 +1,89 @@
 {
-  "node":{
-    "all":"Alle Knoten",
-    "nodes":"Knoten",
-    "uptime":"Laufzeit",
-    "links":"Verbindungen",
-    "clients":"Nutzer",
-    "distance":"Entfernung",
-    "tq":"TQ",
-    "lastOnline":"online, letzte Nachricht %{time} (%{date})",
-    "lastOffline":"offline, letzte Nachricht %{time} (%{date})",
-    "activated":"aktiviert (%{branch})",
-    "deactivated":"deaktiviert",
-    "status":"Status",
-    "firmware":"Firmware-Version",
-    "hardware":"Geräte-Modell",
-    "visible":"Auf der Karte sichtbar",
-    "update":"Auto-Update",
-    "site":"Site",
-    "gateway":"Gateway",
-    "coordinates":"Koordinaten",
-    "contact":"Kontakt",
-    "primaryMac":"Primäre MAC",
-    "id":"Knoten ID",
-    "firstSeen":"Erstmals gesehen",
-    "systemLoad":"Load average",
-    "ram":"Speicherauslastung",
-    "ipAddresses":"IP Adressen",
-    "selectedGateway":"Gewähltes Gateway",
-    "link":"Verbindung |||| Verbindungen",
-    "node":"Knoten",
-    "new":"Neuer Knoten",
-    "missing":"Verschwundene Knoten"
+  "node": {
+    "all": "Alle Knoten",
+    "nodes": "Knoten",
+    "uptime": "Laufzeit",
+    "links": "Verbindungen",
+    "clients": "Nutzer",
+    "distance": "Entfernung",
+    "tq": "TQ",
+    "lastOnline": "online, letzte Nachricht %{time} (%{date})",
+    "lastOffline": "offline, letzte Nachricht %{time} (%{date})",
+    "activated": "aktiviert (%{branch})",
+    "deactivated": "deaktiviert",
+    "status": "Status",
+    "firmware": "Firmware-Version",
+    "hardware": "Geräte-Modell",
+    "visible": "Auf der Karte sichtbar",
+    "update": "Auto-Update",
+    "site": "Site",
+    "gateway": "Gateway",
+    "coordinates": "Koordinaten",
+    "contact": "Kontakt",
+    "primaryMac": "Primäre MAC",
+    "id": "Knoten ID",
+    "firstSeen": "Erstmals gesehen",
+    "systemLoad": "Load average",
+    "ram": "Speicherauslastung",
+    "ipAddresses": "IP Adressen",
+    "selectedGateway": "Gewähltes Gateway",
+    "link": "Verbindung |||| Verbindungen",
+    "node": "Knoten",
+    "new": "Neue Knoten",
+    "missing": "Verschwundene Knoten"
   },
-  "location":{
-    "location":"Standort",
-    "latitude":"Breitengrad",
-    "longitude":"Längengrad",
-    "copy":"Kopieren"
+  "location": {
+    "location": "Standort",
+    "latitude": "Breitengrad",
+    "longitude": "Längengrad",
+    "copy": "Kopieren"
   },
-  "sidebar":{
+  "sidebar": {
     "nodeFilter": "Knotenfilter",
-    "nodes":"%{total} Knoten, davon %{online} Knoten online",
-    "clients":"mit %{smart_count} Nutzer |||| mit %{smart_count} Nutzern",
-    "gateway":"auf %{smart_count} Gateway |||| auf %{smart_count} Gateways",
-    "lastUpdate":"Letzte Aktualisierung",
-    "nodeNew":"Knoten ist neu",
-    "nodeOnline":"Knoten ist online",
-    "nodeOffline":"Knoten ist offline",
-    "aboutInfo":"<h2>Über Meshviewer</h2><p>Mit Doppelklick kann man in die Karte hinein zoomen und Shift+Doppelklick heraus zoomen.</p>",
-    "actual":"Aktuell",
-    "stats":"Statistiken",
-    "about":"Über"
+    "nodes": "%{total} Knoten, davon %{online} Knoten online",
+    "clients": "mit %{smart_count} Nutzer |||| mit %{smart_count} Nutzern",
+    "gateway": "auf %{smart_count} Gateway |||| auf %{smart_count} Gateways",
+    "lastUpdate": "Letzte Aktualisierung",
+    "nodeNew": "Knoten ist neu",
+    "nodeOnline": "Knoten ist online",
+    "nodeOffline": "Knoten ist offline",
+    "aboutInfo": "<h2>Über Meshviewer</h2><p>Mit Doppelklick kann man in die Karte hinein zoomen und Shift+Doppelklick heraus zoomen.</p>",
+    "actual": "Aktuell",
+    "stats": "Statistiken",
+    "about": "Über"
   },
   "button": {
     "switchView": "Ansicht wechseln",
-    "location":"Koordinaten wählen",
-    "tracking":"Lokaliserung"
+    "location": "Koordinaten wählen",
+    "tracking": "Lokalisierung"
   },
-  "momentjs":{
-    "calendar":{
-      "sameDay":"[heute um] LT [Uhr]",
-      "nextDay":"[morgen um] LT [Uhr]",
-      "nextWeek":"dddd [um] LT [Uhr]",
-      "lastDay":"[gestern um] LT [Uhr]",
-      "lastWeek":"[letzten] dddd [um] LT [Uhr]",
-      "sameElse":"L"
+  "momentjs": {
+    "calendar": {
+      "sameDay": "[heute um] LT [Uhr]",
+      "nextDay": "[morgen um] LT [Uhr]",
+      "nextWeek": "dddd [um] LT [Uhr]",
+      "lastDay": "[gestern um] LT [Uhr]",
+      "lastWeek": "[letzten] dddd [um] LT [Uhr]",
+      "sameElse": "L"
     },
-    "relativeTime":{
-      "future":"in %s",
-      "past":"vor %s",
-      "s":"ein paar Sekunden",
-      "m":"einer Minute",
-      "mm":"%d Minuten",
-      "h":"einer Stunde",
-      "hh":"%d Stunden",
-      "d":"einem Tag",
-      "dd":"%d Tagen",
-      "M":"einem Monat",
-      "MM":"%d Monate",
-      "y":"einem Jahr",
-      "yy":"%d Jahre"
+    "relativeTime": {
+      "future": "in %s",
+      "past": "vor %s",
+      "s": "ein paar Sekunden",
+      "m": "einer Minute",
+      "mm": "%d Minuten",
+      "h": "einer Stunde",
+      "hh": "%d Stunden",
+      "d": "einem Tag",
+      "dd": "%d Tagen",
+      "M": "einem Monat",
+      "MM": "%d Monate",
+      "y": "einem Jahr",
+      "yy": "%d Jahre"
     }
   },
-  "yes":"ja",
-  "no":"nein",
-  "unknown":"unbekannt",
-  "none":"keine"
+  "yes": "ja",
+  "no": "nein",
+  "unknown": "unbekannt",
+  "none": "keine"
 }
