--- a/locale/en.json
+++ b/locale/en.json
@@ -48,7 +48,7 @@
     "nodeOnline": "Node is online",
     "nodeOffline": "Node is offline",
     "aboutInfo": "<h2>About Meshviewer</h2> <p>You can zoom in with double-click and zoom out with shift+double-click</p>",
-    "actual": "Actual",
+    "actual": "Current",
     "stats": "Statistics",
     "about": "About"
   },
