[TASK] Update locale ru

--- a/locale/ru.json
+++ b/locale/ru.json
@@ -6,7 +6,7 @@
     "links": "Ссылки",
     "clients": "Клиенты",
     "distance": "Расстояние",
-    "tq": "Транспорт качество",
+    "tq": "Качество связи",
     "lastOnline": "в сети, последнее сообщение %{time} (%{date})",
     "lastOffline": "не в сети, последнее сообщение %{time} (%{date})",
     "activated": "активировано (%{branch})",
@@ -43,7 +43,7 @@
     "nodes": "%{total} узлов, включая %{online} узлов онлайн",
     "clients": "с %{smart_count} клиентом |||| с %{smart_count} клиентами",
     "gateway": "на %{smart_count} шлюзе |||| на %{smart_count} шлюзах",
-    "lastUpdate": "Последние обновления",
+    "lastUpdate": "Последнее обновление",
     "nodeNew": "Узел новый",
     "nodeOnline": "Узел в сети",
     "nodeOffline": "Узел не в сети",
