[TASK] display gateways and nexthop + fix proportions gateway

--- a/locale/de.json
+++ b/locale/de.json
@@ -26,7 +26,9 @@
     "systemLoad": "Systemlast",
     "ram": "Speicherauslastung",
     "ipAddresses": "IP Adressen",
-    "selectedGateway": "Gewähltes Gateway",
+    "selectedNexthop": "Gewähltes nächster Hop",
+    "selectedGatewayIPv4": "Gewähltes IPv4-Gateway",
+    "selectedGatewayIPv6": "Gewähltes IPv6-Gateway",
     "link": "Verbindung |||| Verbindungen",
     "node": "Knoten",
     "new": "Neue Knoten",
