--- a/locale/de.json
+++ b/locale/de.json
@@ -26,7 +26,7 @@
     "systemLoad": "Systemlast",
     "ram": "Speicherauslastung",
     "ipAddresses": "IP Adressen",
-    "selectedNexthop": "Gewähltes nächster Hop",
+    "nexthop": "Nächster Hop",
     "selectedGatewayIPv4": "Gewähltes IPv4-Gateway",
     "selectedGatewayIPv6": "Gewähltes IPv6-Gateway",
     "link": "Verbindung |||| Verbindungen",
