@xf- ideas + some special

--- a/locale/en.json
+++ b/locale/en.json
@@ -45,9 +45,9 @@
     "clients": "with %{smart_count} client |||| with %{smart_count} clients",
     "gateway": "on %{smart_count} gateway |||| on %{smart_count} gateways",
     "lastUpdate": "Last update",
-    "nodeNew": "Node is new",
-    "nodeOnline": "Node is online",
-    "nodeOffline": "Node is offline",
+    "nodeNew": "new",
+    "nodeOnline": "online",
+    "nodeOffline": "offline",
     "aboutInfo": "<h2>About Meshviewer</h2> <p>You can zoom in with double-click and zoom out with shift+double-click</p>",
     "actual": "Current",
     "stats": "Statistics",
@@ -87,7 +87,7 @@
   "yes": "yes",
   "no": "no",
   "unknown": "unknown",
-  "others": "others",
+  "others": "other",
   "none": "none",
   "remove": "remove",
   "close": "close"
