--- a/locale/fr.json
+++ b/locale/fr.json
@@ -44,9 +44,9 @@
     "clients": "avec %{smart_count} client |||| avec %{smart_count} clients",
     "gateway": "sur %{smart_count} passerelle |||| sur %{smart_count} passerelles",
     "lastUpdate": "Dernière actualisation",
-    "nodeNew": "nouveau",
-    "nodeOnline": "en ligne",
-    "nodeOffline": "hors ligne",
+    "nodeNew": "Nœud est nouveau",
+    "nodeOnline": "Nœud est en ligne",
+    "nodeOffline": "Nœud hors ligne",
     "aboutInfo": "<h2>Sur Meshviewer</h2> <p>Vous pouvez zoomer avec double-clic et effectuer un zoom arrière avec shift + double-clic</p>",
     "actual": "Actuel",
     "stats": "Statistiques",
