--- a/locale/de.json
+++ b/locale/de.json
@@ -26,9 +26,7 @@
     "systemLoad": "Systemlast",
     "ram": "Speicherauslastung",
     "ipAddresses": "IP Adressen",
-    "nexthop": "Nächster Hop",
-    "selectedGatewayIPv4": "Gewähltes IPv4-Gateway",
-    "selectedGatewayIPv6": "Gewähltes IPv6-Gateway",
+    "selectedGateway": "Gewähltes Gateway",
     "link": "Verbindung |||| Verbindungen",
     "node": "Knoten",
     "new": "Neue Knoten",
