--- a/locale/ru.json
+++ b/locale/ru.json
@@ -26,6 +26,7 @@
     "systemLoad": "Средняя загрузка",
     "ram": "Используемая память",
     "ipAddresses": "IP адреса",
+    "selectedGateway": "Выбранный шлюз",
     "link": "Ссылка |||| Ссылки",
     "node": "Узел |||| Узлы",
     "new": "Новые узлы",
