[TASK] display & filter gateways IP4/6 and nexthop

--- a/locale/en.json
+++ b/locale/en.json
@@ -27,7 +27,9 @@
     "systemLoad": "Load average",
     "ram": "Memory usage",
     "ipAddresses": "IP addresses",
-    "selectedGateway": "Selected gateway",
+    "nexthop": "Nexthop",
+    "selectedGatewayIPv4": "Selected ipv4-gateway",
+    "selectedGatewayIPv6": "Selected ipv6-gateway",
     "link": "Link |||| Links",
     "node": "Node |||| Nodes",
     "new": "New nodes",
