--- a/locale/ru.json
+++ b/locale/ru.json
@@ -6,6 +6,7 @@
     "links": "Ссылки",
     "clients": "Клиенты",
     "distance": "Расстояние",
+    "connectionType": "Тип подключения",
     "tq": "Качество связи",
     "lastOnline": "в сети, последнее сообщение %{time} (%{date})",
     "lastOffline": "не в сети, последнее сообщение %{time} (%{date})",
@@ -26,7 +27,9 @@
     "systemLoad": "Средняя загрузка",
     "ram": "Используемая память",
     "ipAddresses": "IP адреса",
-    "selectedGateway": "Выбранный шлюз",
+    "nexthop": "Следующий скачок",
+    "selectedGatewayIPv4": "Выбранный шлюз ipv4",
+    "selectedGatewayIPv6": "Выбранный шлюз ipv6",
     "link": "Ссылка |||| Ссылки",
     "node": "Узел |||| Узлы",
     "new": "Новые узлы",
@@ -50,7 +53,8 @@
     "aboutInfo": "<h2>О Meshviewer</h2> <p>Вы можете увеличить масштаб двойным щелчком мыши и уменьшить с shift + двойной щелчок</p>",
     "actual": "Текущее",
     "stats": "Статистика",
-    "about": "О продукте"
+    "about": "О продукте",
+    "toggle": "Включить панель"
   },
   "button": {
     "switchView": "Переключить вид",
@@ -85,5 +89,8 @@
   "yes": "да",
   "no": "нет",
   "unknown": "неизвестно",
-  "none": "нет"
+  "others": "другие",
+  "none": "нет",
+  "remove": "убрать",
+  "close": "закрыть"
 }
