--- a/locale/de.json
+++ b/locale/de.json
@@ -6,6 +6,7 @@
     "links": "Verbindungen",
     "clients": "Nutzer",
     "distance": "Entfernung",
+    "connectionType": "Verbindungsart",
     "tq": "Übertragungsqualität",
     "lastOnline": "online, letzte Nachricht %{time} (%{date})",
     "lastOffline": "offline, letzte Nachricht %{time} (%{date})",
@@ -26,7 +27,9 @@
     "systemLoad": "Systemlast",
     "ram": "Speicherauslastung",
     "ipAddresses": "IP Adressen",
-    "selectedGateway": "Gewähltes Gateway",
+    "nexthop": "Nächster Sprung",
+    "selectedGatewayIPv4": "Gewähltes ipv4 Gateway",
+    "selectedGatewayIPv6": "Gewähltes ipv6 Gateway",
     "link": "Verbindung |||| Verbindungen",
     "node": "Knoten",
     "new": "Neue Knoten",
@@ -44,13 +47,14 @@
     "clients": "mit %{smart_count} Nutzer |||| mit %{smart_count} Nutzern",
     "gateway": "auf %{smart_count} Gateway |||| auf %{smart_count} Gateways",
     "lastUpdate": "Letzte Aktualisierung",
-    "nodeNew": "Knoten ist neu",
-    "nodeOnline": "Knoten ist online",
-    "nodeOffline": "Knoten ist offline",
+    "nodeNew": "neu",
+    "nodeOnline": "online",
+    "nodeOffline": "offline",
     "aboutInfo": "<h2>Über Meshviewer</h2><p>Mit Doppelklick kann man in die Karte hinein zoomen und Shift+Doppelklick heraus zoomen.</p>",
     "actual": "Aktuell",
     "stats": "Statistiken",
-    "about": "Über"
+    "about": "Über",
+    "toggle": "Seitenleiste anzeigen/ausblenden"
   },
   "button": {
     "switchView": "Ansicht wechseln",
@@ -85,5 +89,8 @@
   "yes": "ja",
   "no": "nein",
   "unknown": "unbekannt",
-  "none": "keine"
+  "others": "andere",
+  "none": "keine",
+  "remove": "entfernen",
+  "close": "schließen"
 }
