[TASK] Add optional fullscreen mode

--- a/locale/de.json
+++ b/locale/de.json
@@ -59,7 +59,8 @@
   "button": {
     "switchView": "Ansicht wechseln",
     "location": "Koordinaten wählen",
-    "tracking": "Lokalisierung"
+    "tracking": "Lokalisierung",
+    "fullscreen": "Vollbildmodus wechseln"
   },
   "momentjs": {
     "calendar": {
