meshviewer-ffrgb: drop site for domain

--- a/locale/cz.json
+++ b/locale/cz.json
@@ -17,7 +17,7 @@
     "hardware": "Model hardwaru",
     "visible": "Visible on the map",
     "update": "Automatický update",
-    "site": "Site",
+    "domain": "Domain",
     "gateway": "Brána",
     "coordinates": "Souřadnice",
     "contact": "Kontakt",
