--- a/locale/fr.json
+++ b/locale/fr.json
@@ -17,7 +17,7 @@
     "hardware": "Modèle matériel",
     "visible": "Visible sur la carte",
     "update": "Mise à jour automatique",
-    "site": "Site",
+    "domain": "Domain",
     "gateway": "Passerelle",
     "coordinates": "Coordonnées",
     "contact": "Contact",
