--- a/locale/ru.json
+++ b/locale/ru.json
@@ -17,7 +17,7 @@
     "hardware": "Тип оборудования",
     "visible": "Видно на карте",
     "update": "Автообновление",
-    "site": "Сайт",
+    "domain": "Сайт",
     "gateway": "Шлюз",
     "coordinates": "Координаты",
     "contact": "Контакты",
