Add Deprecation Warning (#1)
* Prepare Deprecation Warning in Infobox

* Deprecation Warning: Add Content

* Add some styling

* Deprecation: Add device list and cleanup

* Make deprecation_warning configurable

* Documentation and Deprecation Warning text improvements

--- a/locale/de.json
+++ b/locale/de.json
@@ -93,5 +93,6 @@
   "others": "andere",
   "none": "keine",
   "remove": "entfernen",
-  "close": "schließen"
+  "close": "schließen",
+  "deprecation": "Warnung: Dieser Knoten ist veraltet, und wird demnächst nicht mehr unterstützt. Mehr Infos unter <a href='https://openwrt.org/supported_devices/432_warning'>4/32 warning</a>. <br> Wenn du der Eigentümer des Gerätes bist, bitten wir dich, das Gerät zu ersetzen, um weiterhin am Netz teilnehmen zu können."
 }
