Add ratio & alt attribute to stats images

--- a/locale/de.json
+++ b/locale/de.json
@@ -93,5 +93,6 @@
   "others": "andere",
   "none": "keine",
   "remove": "entfernen",
-  "close": "schließen"
+  "close": "schließen",
+  "loading": "%{name} graoh (wird generiert)"
 }
