[BUGFIX] fix Typo in de local I think it's quite self-explanatory :smile:

--- a/locale/de.json
+++ b/locale/de.json
@@ -94,5 +94,5 @@
   "none": "keine",
   "remove": "entfernen",
   "close": "schließen",
-  "loading": "%{name} graoh (wird generiert)"
+  "loading": "%{name} graph (wird generiert)"
 }
