Update de.json (POEditor.com)

--- a/locale/de.json
+++ b/locale/de.json
@@ -1,98 +1,99 @@
 {
-  "node": {
-    "all": "Alle Knoten",
-    "nodes": "Knoten",
-    "uptime": "Laufzeit",
-    "links": "Verbindungen",
-    "clients": "Nutzer",
-    "distance": "Entfernung",
-    "connectionType": "Verbindungsart",
-    "tq": "Übertragungsqualität",
-    "lastOnline": "online, letzte Nachricht %{time} (%{date})",
-    "lastOffline": "offline, letzte Nachricht %{time} (%{date})",
-    "activated": "aktiviert (%{branch})",
-    "deactivated": "deaktiviert",
-    "status": "Status",
-    "firmware": "Firmware-Version",
-    "hardware": "Geräte-Modell",
-    "visible": "Auf der Karte sichtbar",
-    "update": "Auto-Update",
-    "domain": "Domain",
-    "gateway": "Gateway",
-    "coordinates": "Koordinaten",
-    "contact": "Kontakt",
-    "primaryMac": "Primäre MAC",
-    "id": "Knoten ID",
-    "firstSeen": "Erstmals gesehen",
-    "systemLoad": "Systemlast",
-    "ram": "Speicherauslastung",
-    "ipAddresses": "IP Adressen",
-    "nexthop": "Nächster Sprung",
-    "selectedGatewayIPv4": "Gewähltes ipv4 Gateway",
-    "selectedGatewayIPv6": "Gewähltes ipv6 Gateway",
-    "link": "Verbindung |||| Verbindungen",
-    "node": "Knoten",
-    "new": "Neue Knoten",
-    "missing": "Verschwundene Knoten"
-  },
-  "location": {
-    "location": "Standort",
-    "latitude": "Breitengrad",
-    "longitude": "Längengrad",
-    "copy": "Kopieren"
-  },
-  "sidebar": {
-    "nodeFilter": "Knotenfilter",
-    "nodes": "%{total} Knoten, davon %{online} Knoten online",
-    "clients": "mit %{smart_count} Nutzer |||| mit %{smart_count} Nutzern",
-    "gateway": "auf %{smart_count} Gateway |||| auf %{smart_count} Gateways",
-    "lastUpdate": "Letzte Aktualisierung",
-    "nodeNew": "neu",
-    "nodeOnline": "online",
-    "nodeOffline": "offline",
-    "aboutInfo": "<h2>Über Meshviewer</h2><p>Mit Doppelklick kann man in die Karte hinein zoomen und Shift+Doppelklick heraus zoomen.</p>",
-    "actual": "Aktuell",
-    "stats": "Statistiken",
-    "about": "Über",
-    "toggle": "Seitenleiste anzeigen/ausblenden"
-  },
-  "button": {
-    "switchView": "Ansicht wechseln",
-    "location": "Koordinaten wählen",
-    "tracking": "Lokalisierung",
-    "fullscreen": "Vollbildmodus wechseln"
-  },
-  "momentjs": {
-    "calendar": {
-      "sameDay": "[heute um] LT [Uhr]",
-      "nextDay": "[morgen um] LT [Uhr]",
-      "nextWeek": "dddd [um] LT [Uhr]",
-      "lastDay": "[gestern um] LT [Uhr]",
-      "lastWeek": "[letzten] dddd [um] LT [Uhr]",
-      "sameElse": "L"
+    "node": {
+        "all": "Alle Knoten",
+        "nodes": "Knoten",
+        "uptime": "Laufzeit",
+        "links": "Verbindungen",
+        "clients": "Nutzer",
+        "distance": "Entfernung",
+        "connectionType": "Verbindungsart",
+        "tq": "Übertragungsqualität",
+        "lastOnline": "online, letzte Nachricht %{time} (%{date})",
+        "lastOffline": "offline, letzte Nachricht %{time} (%{date})",
+        "activated": "aktiviert (%{branch})",
+        "deactivated": "deaktiviert",
+        "status": "Status",
+        "firmware": "Firmware-Version",
+        "hardware": "Geräte-Modell",
+        "visible": "Auf der Karte sichtbar",
+        "update": "Auto-Update",
+        "site": "Site",
+        "gateway": "Gateway",
+        "coordinates": "Koordinaten",
+        "contact": "Kontakt",
+        "primaryMac": "Primäre MAC",
+        "id": "Knoten ID",
+        "firstSeen": "Erstmals gesehen",
+        "systemLoad": "Systemlast",
+        "ram": "Speicherauslastung",
+        "ipAddresses": "IP Adressen",
+        "nexthop": "Nächster Sprung",
+        "selectedGatewayIPv4": "Gewähltes ipv4 Gateway",
+        "selectedGatewayIPv6": "Gewähltes ipv6 Gateway",
+        "link": "Verbindung |||| Verbindungen",
+        "node": "Knoten",
+        "new": "Neue Knoten",
+        "missing": "Verschwundene Knoten",
+        "domain": "Domain"
     },
-    "relativeTime": {
-      "future": "in %s",
-      "past": "vor %s",
-      "s": "ein paar Sekunden",
-      "m": "einer Minute",
-      "mm": "%d Minuten",
-      "h": "einer Stunde",
-      "hh": "%d Stunden",
-      "d": "einem Tag",
-      "dd": "%d Tagen",
-      "M": "einem Monat",
-      "MM": "%d Monate",
-      "y": "einem Jahr",
-      "yy": "%d Jahre"
-    }
-  },
-  "yes": "ja",
-  "no": "nein",
-  "unknown": "unbekannt",
-  "others": "andere",
-  "none": "keine",
-  "remove": "entfernen",
-  "close": "schließen",
-  "loading": "%{name} graoh (wird generiert)"
+    "location": {
+        "location": "Standort",
+        "latitude": "Breitengrad",
+        "longitude": "Längengrad",
+        "copy": "Kopieren"
+    },
+    "sidebar": {
+        "nodeFilter": "Knotenfilter",
+        "nodes": "%{total} Knoten, davon %{online} Knoten online",
+        "clients": "mit %{smart_count} Nutzer |||| mit %{smart_count} Nutzern",
+        "gateway": "auf %{smart_count} Gateway |||| auf %{smart_count} Gateways",
+        "lastUpdate": "Letzte Aktualisierung",
+        "nodeNew": "neu",
+        "nodeOnline": "online",
+        "nodeOffline": "offline",
+        "aboutInfo": "<h2>Über Meshviewer</h2><p>Mit Doppelklick kann man in die Karte hinein- und mit Shift+Doppelklick herauszoomen.</p>",
+        "actual": "Aktuell",
+        "stats": "Statistiken",
+        "about": "Über",
+        "toggle": "Seitenleiste anzeigen/ausblenden"
+    },
+    "button": {
+        "switchView": "Ansicht wechseln",
+        "location": "Koordinaten wählen",
+        "tracking": "Lokalisierung",
+        "fullscreen": "Vollbild"
+    },
+    "momentjs": {
+        "calendar": {
+            "sameDay": "[heute um] LT [Uhr]",
+            "nextDay": "[morgen um] LT [Uhr]",
+            "nextWeek": "dddd [um] LT [Uhr]",
+            "lastDay": "[gestern um] LT [Uhr]",
+            "lastWeek": "[letzten] dddd [um] LT [Uhr]",
+            "sameElse": "L"
+        },
+        "relativeTime": {
+            "future": "in %s",
+            "past": "vor %s",
+            "s": "ein paar Sekunden",
+            "m": "einer Minute",
+            "mm": "%d Minuten",
+            "h": "einer Stunde",
+            "hh": "%d Stunden",
+            "d": "einem Tag",
+            "dd": "%d Tagen",
+            "M": "einem Monat",
+            "MM": "%d Monate",
+            "y": "einem Jahr",
+            "yy": "%d Jahre"
+        }
+    },
+    "yes": "ja",
+    "no": "nein",
+    "unknown": "unbekannt",
+    "others": "andere",
+    "none": "keine",
+    "remove": "entfernen",
+    "close": "schließen",
+    "loading": "%{name} graph (wird generiert)"
 }
